--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
-  "version": "0.0.1",
+  "version": "0.0.2",
   "name": "go-llm-manager",
   "slug": "go-llm-manager",
   "description": "",
   "startup": "application",
   "boot": "auto",
-  "image": "danielapatin/go-llm-manager",
+  "image": "danielapatin/server",
   "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
   "hassio_role": "default",
   "map": ["config:rw"],
