--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.3",
+  "version": "0.0.4",
   "name": "go-llm-manager",
   "slug": "go-llm-manager",
   "description": "",
@@ -9,6 +9,19 @@
   "arch": ["aarch64", "amd64", "armhf", "armv7", "i386"],
   "hassio_role": "default",
   "map": ["config:rw"],
+  "webui": "http://[HOST]:[PORT:7890]/",
+  "panel_admin": true,
+  "panel_icon": "mdi:home-city-outline",
+  "panel_title": "go-parking",
+  "ports": {
+    "7890/tcp": 7890
+  },
+  "ports_description": {
+    "7890/tcp": "Exposed port"
+  },
+  "hassio_api": true,
+  "homeassistant_api": true,
+  "host_network": false,
   "options": {
     "SERVER": {
       "HOST": "0.0.0.0",
