Обновить версию до 0.3.1; добавить генерацию токена результата для активных задач в обработчике GetUserData

--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -39,4 +39,5 @@ jobs:
           KO_DOCKER_REPO: ${{ secrets.DOCKER_USER }}
           BUILD_VERSION: ${{ steps.set_var.outputs.version }}
         run: |
+          echo "Building with version: $BUILD_VERSION"
           ko build ./cmd/server --base-import-paths --sbom=none --tags="$BUILD_VERSION,latest"
